--- a/src/screens/HomePage/components/Slide/Slide.module.scss
+++ b/src/screens/HomePage/components/Slide/Slide.module.scss
@@ -11,8 +11,8 @@
   width: 100%;
 
   .arr {
-    width: 43px !important;
-    height: 43px !important;
+    width: 43px;
+    height: 43px;
     background: #7BBEFF;
     border-radius: 22px;
     display: flex;
