Header stock update

--- a/src/components/StockItem/StockItem.module.scss
+++ b/src/components/StockItem/StockItem.module.scss
@@ -6,6 +6,7 @@
   background: rgba(255, 255, 255, 0.60);
   backdrop-filter: blur(9.5px);
   padding: 1.2rem 1rem;
+  cursor: pointer;
   .title{
     color: #000;
     font-size: 16px;
