--- a/src/screens/HomePage/components/Slide/Slide.module.scss
+++ b/src/screens/HomePage/components/Slide/Slide.module.scss
@@ -1,6 +1,6 @@
-.swiper-slide{
-  width: fit-content;
- }
+// .swiper-slide{
+//   width: fit-content;
+//  }
 .slide {
   margin-top: 1rem;
   display: flex;
