--- a/src/components/Offers/OffersBanks/OffersBanks.module.scss
+++ b/src/components/Offers/OffersBanks/OffersBanks.module.scss
@@ -13,7 +13,7 @@
     span {
       mark {
         background: transparent;
-        color: #4DA7FF;
+        color: #4da7ff;
       }
 
       color: #121212;
@@ -36,6 +36,15 @@
     justify-content: center;
     align-items: center;
     margin-top: 2rem;
+  }
+
+  .deposit_offers_children {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    overflow: hidden;
+    transition: height 1s ease-in-out;
   }
 }
 
