credit mvp pages comlited

--- a/src/screens/CreditsPage/components/OurPartners/OurPartners.module.scss
+++ b/src/screens/CreditsPage/components/OurPartners/OurPartners.module.scss
@@ -1,6 +1,8 @@
 .wrapp {
+  display: flex;
+  flex-direction: column;
   margin: 6rem 0;
-  .title{
+  .title {
     color: var(--main, #121212);
     text-align: center;
     font-variant-numeric: lining-nums proportional-nums;
@@ -9,21 +11,22 @@
     font-weight: 500;
     line-height: 86.4%; /* 39.744px */
     margin-bottom: 2rem;
-    mark{
+    mark {
       background: transparent;
-      color: #4DA7FF;
+      color: #4da7ff;
     }
   }
-  .cont{
-    width: 83%;
-    margin-right: auto;
-    margin-left: auto;
-  }
+  // .cont {
+  //   width: 100%;
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-items: center;
+  // }
 }
 
-@media (max-width: 480px){
-  .wrapp{
-    .title{
+@media (max-width: 480px) {
+  .wrapp {
+    .title {
       font-size: 25px;
     }
   }
