--- a/src/screens/MicroLoans/components/WebLoanItem/index.module.scss
+++ b/src/screens/MicroLoans/components/WebLoanItem/index.module.scss
@@ -3,8 +3,8 @@
   height: 320px;
   padding: 24px;
   border-radius: 7px;
-  border: 1px solid #D9DBDF;
-  background: #FFF;
+  border: 1px solid #d9dbdf;
+  background: #fff;
   flex-shrink: 0;
 
   .header {
@@ -14,16 +14,20 @@
 
     .info {
       .title {
+        max-width: 100px;
         color: #121212;
         font-variant-numeric: lining-nums proportional-nums;
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
         line-height: normal;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .sub {
-        color: #B4B4B4;
+        color: #b4b4b4;
         font-variant-numeric: lining-nums proportional-nums;
         font-size: 12px;
         font-style: normal;
@@ -48,7 +52,7 @@
   .line {
     margin: 16px 0;
     height: 1px;
-    background: #E0EAFF;
+    background: #e0eaff;
   }
 
   .of_info {
@@ -62,7 +66,7 @@
       align-items: center;
 
       span:first-child {
-        color: #4DA7FF;
+        color: #4da7ff;
         font-variant-numeric: lining-nums proportional-nums;
         font-size: 14px;
         font-style: normal;
@@ -86,7 +90,7 @@
     flex-wrap: wrap;
     display: flex;
     gap: 5px;
-    button{
+    button {
       width: 180px !important;
     }
     .warn {
@@ -97,12 +101,11 @@
       height: 40px;
       width: 40px;
       border-radius: 5.367px;
-      border: 0.767px solid #4DA7FF;
-      background: #FFF;
-      box-shadow: 0px 2.299999952316284px 6.133333206176758px 0px rgba(217, 231, 250, 0.40);
+      border: 0.767px solid #4da7ff;
+      background: #fff;
+      box-shadow: 0px 2.299999952316284px 6.133333206176758px 0px
+        rgba(217, 231, 250, 0.4);
       backdrop-filter: blur(7.64620304107666px);
     }
   }
-
-
 }
