--- a/src/components/Banki/BankiImg/BankImgItemSlide/BankImgItemSlide.module.scss
+++ b/src/components/Banki/BankiImg/BankImgItemSlide/BankImgItemSlide.module.scss
@@ -1,5 +1,5 @@
-.item{
-  flex-shrink: 0;
+.item {
+  // flex-shrink: 0;
   width: 152px;
   height: 64px;
   display: flex;
@@ -7,7 +7,7 @@
   align-items: center;
   padding: 16px;
   border-radius: 14px;
-  border: 1px solid #D9DBDF;
-  background: #FFF;
+  border: 1px solid #d9dbdf;
+  background: #fff;
   backdrop-filter: blur(9.5px);
 }
