--- a/src/screens/ConsumerCreditsPage/Components/SliderBanksCons/SliderBanksCons.module.scss
+++ b/src/screens/ConsumerCreditsPage/Components/SliderBanksCons/SliderBanksCons.module.scss
@@ -4,6 +4,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.arr {
+  cursor: pointer;
+}
 
 @media (max-width: 480px) {
   .slider {
