add search and fix small bug

--- a/src/UI/Search/Search.module.scss
+++ b/src/UI/Search/Search.module.scss
@@ -62,6 +62,7 @@
     display: flex;
     gap: 5px;
     flex-direction: column;
+    z-index: 1 !important;
     .drop_item{
       display: block;
 
