--- a/src/screens/CreditMapPage/components/Offers/Offers.module.scss
+++ b/src/screens/CreditMapPage/components/Offers/Offers.module.scss
@@ -47,8 +47,30 @@
     }
   }
 }
-@media (max-width: 480px){
-  .count_container{
+.deposit_offers {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+  }
+.deposit_offers_children {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  overflow: hidden;
+  transition: height 1s ease-in-out;
+}
+.btn_cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 480px) {
+  .count_container {
     flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
