--- a/src/screens/CreditMapPage/components/OffersItem/OffersItem.module.scss
+++ b/src/screens/CreditMapPage/components/OffersItem/OffersItem.module.scss
@@ -21,6 +21,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: 86.4%;
+  cursor: pointer;
 }
 
 .bank_container {
@@ -30,6 +31,11 @@
   margin-left: 24px;
 
   .bold_text {
+    width: 120px;
+    text-wrap: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
     color: #000;
     font-variant-numeric: lining-nums proportional-nums;
     font-family: Raleway, serif;
@@ -40,16 +46,17 @@
   }
 
   .grey_text {
+    width: 120px;
+    text-wrap: wrap;
     color: var(--2, #b4b4b4);
     font-variant-numeric: lining-nums proportional-nums;
-    font-family: "Raleway", serif;
+    font-family: 'Raleway', serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: 86.4%;
   }
 }
-
 
 .types_container {
   display: flex;
@@ -64,11 +71,11 @@
     .bottom_container_active_container {
       padding: 16px;
       border-radius: 7px;
-      background: #4DA7FF;
-      color: #FFF;
+      background: #4da7ff;
+      color: #fff;
       leading-trim: both;
       text-edge: cap;
-      font-family: "Raleway", serif;
+      font-family: 'Raleway', serif;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
@@ -77,17 +84,17 @@
 
     .bottom_container_container {
       padding: 16px;
-      color: var(--stroke-3, #4DA7FF);
+      color: var(--stroke-3, #4da7ff);
       leading-trim: both;
       text-edge: cap;
-      font-family: "Raleway", serif;
+      font-family: 'Raleway', serif;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
       line-height: 86.4%;
       border-radius: 7px;
-      border: 1px solid var(--stroke-3, #4DA7FF);
-      background: var(--unnamed, rgba(217, 231, 250, 0.40));
+      border: 1px solid var(--stroke-3, #4da7ff);
+      background: var(--unnamed, rgba(217, 231, 250, 0.4));
     }
   }
 
@@ -101,9 +108,9 @@
       gap: 16px;
 
       .blue_text {
-        color: var(--blu-main, #4DA7FF);
+        color: var(--blu-main, #4da7ff);
         font-variant-numeric: lining-nums proportional-nums;
-        font-family: "Raleway", serif;
+        font-family: 'Raleway', serif;
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -113,7 +120,7 @@
       .text {
         color: var(--main, #121212);
         font-variant-numeric: lining-nums proportional-nums;
-        font-family: "Raleway", serif;
+        font-family: 'Raleway', serif;
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
@@ -144,9 +151,9 @@
       flex-shrink: 0;
 
       p {
-        color: #4DA7FF;
+        color: #4da7ff;
         font-variant-numeric: lining-nums proportional-nums;
-        font-family: "Raleway", serif;
+        font-family: 'Raleway', serif;
         font-size: 16px;
         font-style: normal;
         font-weight: 500;
@@ -154,10 +161,10 @@
       }
 
       border-radius: 5.367px;
-      border: 0.767px solid var(--stroke-3, #4DA7FF);
-      background: #FFF;
-      box-shadow: 0 2.299999952316284px 6.133333206176758px 0 rgba(217, 231, 250, 0.40);
-
+      border: 0.767px solid var(--stroke-3, #4da7ff);
+      background: #fff;
+      box-shadow: 0 2.299999952316284px 6.133333206176758px 0
+        rgba(217, 231, 250, 0.4);
     }
 
     .warning_container {
@@ -168,14 +175,13 @@
       align-items: center;
       gap: 8px;
       border-radius: 5.367px;
-      border: 0.767px solid var(--stroke-3, #4DA7FF);
-      background: #FFF;
-      box-shadow: 0px 2.299999952316284px 6.133333206176758px 0px rgba(217, 231, 250, 0.40);
-
+      border: 0.767px solid var(--stroke-3, #4da7ff);
+      background: #fff;
+      box-shadow: 0px 2.299999952316284px 6.133333206176758px 0px
+        rgba(217, 231, 250, 0.4);
     }
   }
 }
-
 
 .image {
   width: 18px;
