--- a/src/components/BanksWithButton/BankCardItem/BankCardItem.module.scss
+++ b/src/components/BanksWithButton/BankCardItem/BankCardItem.module.scss
@@ -1,7 +1,7 @@
 .main_container {
   border-radius: 14px;
-  border: 1px solid var(--stroke-1, #D9DBDF);
-  background: #FFF;
+  border: 1px solid var(--stroke-1, #d9dbdf);
+  background: #fff;
   width: 100%;
   height: 100px;
   display: flex;
@@ -14,6 +14,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 170px;
+    gap: 10px;
+    text-wrap: nowrap;
+
     color: #000;
     font-variant-numeric: lining-nums proportional-nums;
     font-family: Raleway, serif;
@@ -24,7 +28,12 @@
     margin-bottom: 16px;
 
     span {
-      color: var(--2, #B4B4B4);
+      width: 170px;
+      text-wrap: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+
+      color: var(--2, #b4b4b4);
       font-variant-numeric: lining-nums proportional-nums;
       font-family: Raleway, serif;
       font-style: normal;
@@ -40,7 +49,7 @@
     gap: 16px;
 
     .blue_text {
-      color: var(--blu-main, #4DA7FF);
+      color: var(--blu-main, #4da7ff);
       font-variant-numeric: lining-nums proportional-nums;
       font-family: Raleway, serif;
       font-size: 16px;
@@ -67,7 +76,7 @@
     gap: 16px;
 
     .blue_text {
-      color: var(--blu-main, #4DA7FF);
+      color: var(--blu-main, #4da7ff);
       font-variant-numeric: lining-nums proportional-nums;
       font-family: Raleway, serif;
       font-size: 16px;
@@ -95,7 +104,7 @@
     gap: 16px;
 
     .blue_text {
-      color: var(--blu-main, #4DA7FF);
+      color: var(--blu-main, #4da7ff);
       font-variant-numeric: lining-nums proportional-nums;
       font-family: Raleway, serif;
       font-size: 16px;
@@ -129,7 +138,9 @@
       justify-content: center;
     }
 
-    .period_container, .time_container, .bonus_container {
+    .period_container,
+    .time_container,
+    .bonus_container {
       width: 100%;
       margin: 0;
       flex-direction: row;
