--- a/src/screens/InstallmentPage/components/InstallmentPageAdvantages/index.module.scss
+++ b/src/screens/InstallmentPage/components/InstallmentPageAdvantages/index.module.scss
@@ -1,50 +1,64 @@
-.container {
+.card {
   display: flex;
-  width: 100%;
+  padding: 16px 24px;
+  border-radius: 14px;
+  border: 1px solid var(--stroke-1, #d9dbdf);
+  background: #fff;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+.bold_text {
+  color: #000;
+  font-family: Raleway, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 86.4%;
+}
+
+.text {
+  color: #000;
+  font-variant-numeric: lining-nums proportional-nums;
+  font-family: Raleway, sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 86.4%;
+}
+.slider {
+  margin-top: 2rem;
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 24px;
+  gap: 10px;
+}
+.arr {
+  cursor: pointer;
+}
 
-  div {
-    display: flex;
-    padding: 16px 24px;
-    border-radius: 14px;
-    border: 1px solid var(--stroke-1, #D9DBDF);
-    background: #FFF;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 16px;
+@media (max-width: 480px) {
+  .slider {
+    width: 100%;
+    gap: 5px;
+    overflow: auto;
 
-    .bold_text {
-      color: #000;
-      font-family: Raleway, sans-serif;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 86.4%;
-    }
-
-    .text {
-      color: #000;
-      font-variant-numeric: lining-nums proportional-nums;
-      font-family: Raleway, sans-serif;
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 86.4%;
+    .arr {
+      display: none;
     }
   }
 }
-@media (max-width: 480px){
-  .container{
+
+@media (max-width: 480px) {
+  .container {
     width: 100%;
     justify-content: flex-start;
     gap: 10px;
     overflow: auto;
-    div{
+    div {
       flex-shrink: 0;
     }
-    svg{
+    svg {
       display: none;
     }
   }
