over point mortgages

--- a/src/screens/DiscountIpotekaPage/components/Items/Items.module.scss
+++ b/src/screens/DiscountIpotekaPage/components/Items/Items.module.scss
@@ -5,7 +5,8 @@
   align-items: center;
   gap: 16px;
   justify-content: center;
-  div {
+
+  .item {
     height: 60px;
     padding: 0px 24px;
     display: flex;
