--- a/src/components/investment/BrokerOffers/index.module.scss
+++ b/src/components/investment/BrokerOffers/index.module.scss
@@ -14,7 +14,7 @@
     span {
       mark {
         background: transparent;
-        color: #4DA7FF;
+        color: #4da7ff;
       }
 
       color: #121212;
@@ -30,6 +30,9 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    overflow: hidden;
+
+    transition: height 1s ease-in-out;
   }
 
   .btn_cont {
