--- a/src/screens/ObligationsInv/components/OffersObligation/OffersObligation.module.scss
+++ b/src/screens/ObligationsInv/components/OffersObligation/OffersObligation.module.scss
@@ -12,7 +12,7 @@
     margin-bottom: 2rem;
 
     .time {
-      color: #B4B4B4;
+      color: #b4b4b4;
       font-variant-numeric: lining-nums proportional-nums;
       font-size: 16px;
       font-style: normal;
@@ -23,7 +23,7 @@
     span {
       mark {
         background: transparent;
-        color: #4DA7FF;
+        color: #4da7ff;
       }
 
       color: #121212;
@@ -39,6 +39,9 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+
+    overflow: hidden;
+    transition: height 1s ease-in-out;
   }
 
   .btn_cont {
