add small fixes for mvp,over business point for frontend

--- a/src/screens/SlipsBusinessPage/components/SlipsBanksSlider/SlipsBanksSlider.module.scss
+++ b/src/screens/SlipsBusinessPage/components/SlipsBanksSlider/SlipsBanksSlider.module.scss
@@ -2,6 +2,7 @@
   margin: 2rem 0;
   display: flex;
   width: 100%;
+  gap: 10px;
   justify-content: space-between;
   align-items: center;
   .items_cont{
