--- a/src/screens/ServiceBusinessPage/components/IntroServiceBusiness/IntroServiceBusiness.module.scss
+++ b/src/screens/ServiceBusinessPage/components/IntroServiceBusiness/IntroServiceBusiness.module.scss
@@ -1,7 +1,7 @@
 .intro {
   width: 100%;
   height: 424px;
-  background-image: url("../../../../assets/icons/service_back.png");
+  background-image: url("../../../../assets/icons/rko_back.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   border-radius: 14px;
