--- a/src/screens/CreditsPage/components/IntroCredits/IntroCredits.module.scss
+++ b/src/screens/CreditsPage/components/IntroCredits/IntroCredits.module.scss
@@ -1,9 +1,9 @@
 .intro {
   width: 100%;
   height: 602px;
-  background: url("../../../../assets/icons/bank_icons/credits_back.png") no-repeat right bottom white;
+  background: url('../../../../assets/icons/bank_icons/credits_back.png') no-repeat right bottom white;
   border-radius: 14px;
-  border: 1px solid #D9DBDF;
+  border: 1px solid #d9dbdf;
 
   .info {
     margin-top: 2rem;
@@ -50,14 +50,14 @@
       height: 314px;
       width: 417px;
       border-radius: 14px;
-      border: 1px solid #4DA7FF;
-      background: rgba(217, 231, 250, 0.40);
+      border: 1px solid #4da7ff;
+      background: rgba(217, 231, 250, 0.4);
       backdrop-filter: blur(10px);
 
       .btnChange {
         border-radius: 7px;
-        border: 1px solid #E0EAFF;
-        background: #FFF;
+        border: 1px solid #e0eaff;
+        background: #fff;
         display: flex;
         width: 173px;
         height: 60px;
@@ -85,12 +85,18 @@
       line-height: 86.4%; /* 13.824px */
       mark {
         background: transparent;
-        color: #B4B4B4;
+        color: #b4b4b4;
       }
     }
   }
-
 }
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
 @media (max-width: 480px) {
   .intro {
     background: none;
@@ -99,15 +105,15 @@
 
     .info {
       margin: 0;
-      button{
+      button {
         margin-right: auto !important;
         margin-left: auto !important;
       }
-      .title{
+      .title {
         font-size: 20px;
         text-align: center;
       }
-      .breadCrumbs{
+      .breadCrumbs {
         text-align: center;
       }
       p {
@@ -130,13 +136,11 @@
           backdrop-filter: none;
           input {
             width: 100% !important;
-
           }
 
           div {
             width: 35% !important;
           }
-
         }
 
         button {
@@ -144,6 +148,5 @@
         }
       }
     }
-
   }
 }
