add small changes for tz

--- a/src/components/Header/Nav/Nav.module.scss
+++ b/src/components/Header/Nav/Nav.module.scss
@@ -2,7 +2,7 @@
   border-radius: 14px;
   background: white;
   border: 1px solid #d9dbdf;
-  position: fixed;
+  position: absolute;
   top: 20px;
   margin-top: 80px;
   width: 1220px;
