--- a/src/screens/HomePage/components/Stock/Stock.module.scss
+++ b/src/screens/HomePage/components/Stock/Stock.module.scss
@@ -7,6 +7,7 @@
   background: url("../../../../assets/icons/back1.png") right white;
 
   .info {
+    width: 60%;
     margin-top: 3rem;
     margin-left: 4rem;
 
@@ -58,7 +59,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 7rem;
+    margin-top: 5rem;
 
   }
 }
