--- a/src/components/MobileHeader/MobileHeader.module.scss
+++ b/src/components/MobileHeader/MobileHeader.module.scss
@@ -31,6 +31,8 @@
 
   }
   .logo{
+    width: 130px;
+    object-fit: contain;
     color: var(--main, #121212);
     font-size: 24px;
     font-style: normal;
